# BA

./: .gitignore  .gitmodules  README.md
git-hooks/: pre-commit
presentation/: .gitignore  main.md
presentation/config/: kitty.conf  presenterm.yaml
rust-bindgen-fuse/: Cargo.toml  build.rs  fuse_config.h  libfuse_config.h
rust-bindgen-fuse/examples/: hello.rs  hello2.rs
rust-bindgen-fuse/headers/: fuse.h
rust-bindgen-fuse/src/: lib.rs
thesis/: architecture.drawio  architecture.mmd  bibliography.bib  glossary.typ  notes.typ  thesis.typ
thesis/git-hooks/: pre-commit
thesis/notes/papers/: 10.1145_3102980.3103006.md  10.1145_3360573.md  10.1145_3428204.md  10592287.md  287352.md  Oikawa2023.md  bugden2022rustprogramminglanguagesafety.md  jung2020safe.md  방인영2024study.md
thesis/notes/templates/: paper.md
thesis/scripts/: bibnotes.fish  newpaper.fish  newtopic.fish  pickpaper.fish  pull_cves.py  qgrep.fish
