[package]
name = "rust-bindgen-fuse"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "0.72.0"

[dependencies]
color-eyre = "0.6.5"
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.14.0"
nix = "0.30.1"
singleton-registry = "2.0.0"
static_assertions = "1.1.0"
thiserror = "2.0.17"
tracing = { version = "0.1.41", features = ["log"] }
typed-builder = "0.23.2"

[dev-dependencies]
chrono = "0.4.43"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
